retirando consoles
